<resources>
    <string name="app_name">School</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_welcome_main">Welcome to advanced schools</string>
    <string name="msg_choose_main">Select one of the options to be logged in</string>
    <string name="label_main_student">Student</string>
    <string name="label_main_teacher">Teacher</string>
    <string name="label_main_parent">Parent</string>
    <string name="title_parent_welcome">Log in to the parent</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="action_register_btn">Register</string>
    <string name="title_student_welcome">Log in to the student</string>
    <string name="hint_student_username">User name</string>
    <string name="hint_student_password">Password</string>
    <string name="action_choose">Choose</string>
    <string name="title_activity_calender">CalenderActivity</string>


    <string name="title_sign_as_student">Sign in as Student</string>
    <string name="title_sign_as_parent">Sign in as Parent</string>
    <string name="title_sign_as_teacher">Sign in as Teacher</string>
    <string name="label_attendance">Attendance</string>
    <string name="label_student_of_day">Student Of Day</string>
    <string name="label_quiz">Quiz</string>
    <string name="label_activities">Activities</string>
    <string name="hint_security_number">Social Security Number</string>
    <string name="hint_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_check">Check</string>
    <string name="hint_phone">Phone</string>
    <string name="msg_have_sms">You have a sms message on this number</string>
    <string name="title_students">Students</string>
    <string name="tab_feeds">Feeds</string>
    <string name="tab_schedule">Schedule</string>
    <string name="tab_home">Home</string>
    <string name="tab_top_student">Student</string>
    <string name="tab_level">Level</string>
    <string name="tab_class">Class</string>
    <string name="points">Points</string>
    <string name="label_read_more">Read more</string>
    <string name="quizzes">Quizzes</string>
    <string name="action_download">File download</string>
    <string name="label_assignment_grade">Assignment Grade</string>
    <string name="action_send">Send</string>
    <string name="tab_new_assignment">New Assignment</string>
    <string name="tab_past">Past</string>
    <string name="point">Point</string>
    <string name="describtion">Description</string>
    <string name="file_download">File download</string>
    <string name="finish_the_assignment">Finish The Assignment</string>
    <string name="file_upload">File Upload</string>
    <string name="upload">Upload</string>
    <string name="send">Send</string>
    <string name="hint_edit_text_type_something">Type Something</string>
    <string name="msg_wrong_password">Data you entered not correct</string>
    <string name="action_close">Close</string>
    <string name="msg_wrong_code">Sorry you entered wrong code</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Edit Profile</string>
    <string name="menu_message">Message</string>
    <string name="menu_about_us">About  us</string>
    <string name="menu_gallary">Picture gallary</string>
    <string name="menu_video">Videos</string>
    <string name="menu_suggestions">Suggestions</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_log_out">LogOut</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="no_permission">There is no a permission from the parent</string>
    <string name="password">Password</string>
    <string name="phone">phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="nationality">Nationality</string>
    <string name="gender">Gender</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="msg_double_click">Please click BACK again to exit</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_social_media">Social Media</string>
    <string name="label_map">Map</string>
    <string name="label_connection_error">Connection error</string>
    <string name="label_server_error">Server error</string>
    <string name="label_network_error">Network error</string>
    <string name="label_time_out_error">Connection time our error</string>
    <string name="label_parse_error">Parse error</string>
    <string name="label_unknown_error">Unknown error</string>
    <string name="label_points">Points</string>
</resources>
