<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    android:orientation="vertical">

    <include layout="@layout/layout_action_bar"
        android:id="@+id/action_bar"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/old_password"

        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp25h"
        android:layout_marginBottom="@dimen/dp2h"
        android:layout_marginStart="@dimen/dp15h"
        android:textColor="@color/colorGray"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp35h"
        android:background="@drawable/et_background"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textSize="14sp"
        android:paddingStart="@dimen/dp15h"
        android:hint="*******"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/new_password"

        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp5h"
        android:layout_marginBottom="@dimen/dp2h"
        android:layout_marginStart="@dimen/dp15h"
        android:textColor="@color/colorGray"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp35h"
        android:background="@drawable/et_background"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textSize="14sp"
        android:paddingStart="@dimen/dp15h"
        android:hint="*******"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/confirm_password"

        android:textSize="10sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dp5h"
        android:layout_marginBottom="@dimen/dp2h"
        android:layout_marginStart="@dimen/dp15h"
        android:textColor="@color/colorGray"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp35h"
        android:background="@drawable/et_background"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textSize="14sp"
        android:paddingStart="@dimen/dp15h"
        android:hint="*******"
        />

    <Button
        android:layout_width="@dimen/dp120h"
        android:layout_height="@dimen/dp35h"
        android:id="@+id/btn_send"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp25h"
        android:layout_marginBottom="@dimen/dp15h"
        android:background="@drawable/btn_rounded_assignment"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

</LinearLayout>