<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/ll_teacher_login_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp40h"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dp100w"
            android:layout_height="@dimen/dp100w"
            android:layout_gravity="center"
            android:src="@drawable/img_checked_parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20h"
            android:gravity="center"
            android:lines="1"
            android:text="@string/title_sign_as_parent"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp15"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20h"
            android:gravity="center"
            android:lines="1"
            android:text="@string/msg_have_sms"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp15" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_teacher_login_head"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp50h"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_parent_phone_container"
            android:layout_width="@dimen/dp250w"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_parent_login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000"
                android:hint="@string/hint_phone"
                android:background="@color/float_transparent"
                android:layout_toStartOf="@+id/iv_parent_login_phone_entered"
                android:inputType="phone"
                android:textColor="#000"
                android:textColorHint="#000" />

            <ImageView
                android:id="@+id/iv_parent_login_phone_entered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_data_entered"
                />



        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_parent_password_container"
            android:layout_width="@dimen/dp250w"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_parent_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#000"
                android:hint="@string/hint_password"
                android:background="@color/float_transparent"
                android:layout_toStartOf="@+id/iv_parent_login_password_entered"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textColorHint="#000" />

            <ImageView
                android:id="@+id/iv_parent_login_password_entered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_data_entered"
                />



        </RelativeLayout>

        <View
            android:layout_width="@dimen/dp250w"
            android:layout_height="@dimen/dp2h"
            android:layout_marginTop="@dimen/dp10h"
            android:background="@color/colorPrimary"/>



    </LinearLayout>


    <dp.school.base.views.AnimatedButtonView
        android:id="@+id/abv_main_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/dp64h"
        android:background="@drawable/btn_background_blue"
        app:abtn_text="@string/action_check"
        app:abtn_text_color="@color/colorWhite" />

    <View
        android:id="@+id/v_parent_login_reveal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorWhite"
        android:visibility="invisible" />


</RelativeLayout>
