<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_phone_number"
        android:textColor="@color/colorBlack"
        android:layout_marginStart="@dimen/dp10w"
        android:layout_marginEnd="@dimen/dp10w"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp15w"
        android:layout_marginEnd="@dimen/dp10w"
        android:text="03432432"
        android:textColor="@color/colorGray" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/dp10h"
        android:background="@color/colorGray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10h"
        android:layout_marginStart="@dimen/dp10w"
        android:layout_marginEnd="@dimen/dp10w"
        android:text="@string/label_social_media"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_marginStart="@dimen/dp10w"
        android:layout_marginEnd="@dimen/dp10w"
        android:layout_marginTop="@dimen/dp10h"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_linked_in" />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_linked_in" />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_linked_in" />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_linked_in" />

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_linked_in" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/dp10h"
        android:background="@color/colorGray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10h"

        android:layout_marginStart="@dimen/dp10w"
        android:layout_marginEnd="@dimen/dp10w"
        android:text="@string/label_map"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />

    <com.google.android.gms.maps.MapView
        android:layout_marginTop="@dimen/dp10h"
        android:layout_marginStart="@dimen/dp10w"
        android:layout_marginEnd="@dimen/dp10w"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />
</LinearLayout>